# agentic-aegis

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GUIDE.md  INSTALL.md  Makefile  README.md  SECURITY.md  sister.manifest.json
.github/workflows/: canonical-sister-guardrails.yml  ci.yml  install-command-guardrails.yml  release.yml
crates/agentic-aegis-cli/: Cargo.toml
crates/agentic-aegis-cli/src/: main.rs
crates/agentic-aegis-core/: Cargo.toml
crates/agentic-aegis-core/benches/: core_bench.rs  validation_bench.rs
crates/agentic-aegis-core/src/: lib.rs
crates/agentic-aegis-core/src/bridges/: foundation.rs  hydra.rs  mod.rs  noop.rs  traits.rs
crates/agentic-aegis-core/src/cache/: invalidation.rs  lru.rs  metrics.rs  mod.rs
crates/agentic-aegis-core/src/index/: mod.rs  primary.rs  secondary.rs
crates/agentic-aegis-core/src/protection/: mod.rs
crates/agentic-aegis-core/src/protection/input/: intent_verifier.rs  mod.rs  payload_scanner.rs  prompt_injection.rs  rate_limiter.rs
crates/agentic-aegis-core/src/protection/output/: code_safety.rs  content_filter.rs  mod.rs  output_sanitizer.rs  pii_detector.rs
crates/agentic-aegis-core/src/query/: delta.rs  intent.rs
crates/agentic-aegis-core/src/session/: hints.rs  manager.rs  mod.rs  rollback.rs  state.rs
crates/agentic-aegis-core/src/shadow/: compiler.rs  executor.rs  mod.rs  monitor.rs  tracker.rs
crates/agentic-aegis-core/src/types/: error.rs  ids.rs  mod.rs  security.rs  session.rs  validation.rs
crates/agentic-aegis-core/src/validators/: mod.rs  semantic_validator.rs  syntax_validator.rs  token_validator.rs  type_validator.rs
crates/agentic-aegis-core/tests/: conservation.rs  phase01_types.rs  phase02_validators.rs  phase03_shadow.rs  phase04_protection.rs  phase05_session.rs  phase06_bridges.rs  phase10_stress.rs
crates/agentic-aegis-ffi/: Cargo.toml
crates/agentic-aegis-ffi/src/: lib.rs
crates/agentic-aegis-mcp/: Cargo.toml
crates/agentic-aegis-mcp/src/: lib.rs  main.rs
crates/agentic-aegis-mcp/src/config/: mod.rs
crates/agentic-aegis-mcp/src/protocol/: compact.rs  handler.rs  mod.rs
crates/agentic-aegis-mcp/src/session/: mod.rs
crates/agentic-aegis-mcp/src/tools/: mod.rs  registry.rs  security.rs  session.rs  shadow.rs  validation.rs
crates/agentic-aegis-mcp/src/types/: error.rs  metrics.rs  mod.rs
crates/agentic-aegis-mcp/tests/: phase07_mcp_types.rs  phase08_mcp_tools.rs  phase09_protocol.rs  phase11_edge_cases.rs
docs/public/: api-reference.md  architecture.md  benchmarks.md  cli-reference.md  command-surface.md  concepts.md  configuration.md  experience-with-vs-without.md  faq.md  ffi-reference.md  file-format.md  initial-problem-coverage.md  installation.md  integration-guide.md  mcp-prompts.md  mcp-resources.md  mcp-tools.md  playbooks-agent-integration.md  primary-problem-coverage.md  quickstart.md  runtime-install-sync.md  sister.manifest.json  troubleshooting.md
npm/: Cargo.toml
npm/wasm/: Cargo.toml
npm/wasm/src/: lib.rs
paper/paper-i-streaming-validation/: main.tex  references.bib
python/: pyproject.toml
scripts/: bench.sh  check-canonical-consistency.sh  check-canonical-sister.sh  check-command-surface.sh  check-mcp-consolidation.sh  check-runtime-hardening.sh  install.sh  test-primary-problems.sh
