[workspace]
resolver = "2"
members = [
    "crates/agentic-aegis-core",
    "crates/agentic-aegis-mcp",
    "crates/agentic-aegis-cli",
    "crates/agentic-aegis-ffi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/agentralabs/agentic-aegis"
homepage = "https://agentralabs.tech"
authors = ["Agentra Labs <contact@agentralabs.tech>"]

[workspace.dependencies]
agentic-aegis-core = { path = "crates/agentic-aegis-core" }
agentic-sdk = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
clap = { version = "4.4", features = ["derive"] }
blake3 = "1.5"
uuid = { version = "1.6", features = ["v4", "v5", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.9"
regex = "1.10"
