[package]
name = "agentic-aegis-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Streaming validation, shadow execution, and security protection for AI-generated code"

[features]
default = ["cli", "format", "ffi"]
cli = ["clap", "clap_complete", "format"]
format = []
ffi = ["format"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
blake3 = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
tempfile = { workspace = true }
clap = { workspace = true, optional = true }
clap_complete = { version = "4.4", optional = true }
bincode = "1.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "validation_bench"
harness = false

[[bench]]
name = "core_bench"
harness = false

[lib]
name = "agentic_aegis_core"
path = "src/lib.rs"
