[package]
name = "agentic-aegis-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "FFI bindings for AgenticAegis"

[dependencies]
agentic-aegis-core = { workspace = true }
serde_json = { workspace = true }

[lib]
name = "agentic_aegis_ffi"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
